# ai_copilot

./: .env  .env.example  .env.tunnel.example  .gitignore  EXPERT_KNOWLEDGE_IMPLEMENTATION_STRATEGY.md  Makefile  README.md  debug_parsing.js  docker-compose.yml  example_industry_knowledge_schema.sql  get_all_zones.py  parking_expert_knowledge_schema.sql  parking_kpi_knowledge_schema.sql  populate_expert_knowledge.sql  test_chat_api.js  test_db.py  test_flexible_parsing.js  test_tuesday_morning.js
docs/: CLOUD_DEV.md  (+5 more)
services/analyst/: Dockerfile  create_dev_token.py  debug_zone_69701.py  fix_recommendations.py  gunicorn_conf.py  pyproject.toml  test_auth_rec.py  test_connection.py  test_recommendations.py
services/analyst/analyst/: __init__.py  config.py  db.py  logging_utils.py  main.py  observability.py  scheduler.py  security.py
services/analyst/analyst/core/: __init__.py  daily_refresh.py  elasticity_probe.py  expert_recommendation_engine.py  insight_generator.py  memory_distiller.py  parking_expert_ai.py  policy_guardrails.py  prompt_assembler.py  rate_inference.py  recommendation_engine.py
services/analyst/analyst/models/: changes.py  common.py  insights.py  memories.py  prompts.py  recommendations.py  threads.py
services/analyst/analyst/routes/: analytics.py  auth.py  changes.py  diag.py  experiments.py  health.py  insights.py  memories.py  metrics.py  prompts.py  recommendations.py  threads.py
services/analyst/analyst/utils/: attachments.py
services/analyst/migrations/: 0004_parking_kpi_knowledge.sql
services/analyst/static/iframe/: index.html
(+65 files in other folders)
